# smart-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  settings.py  worker.py
alembic/: env.py
alembic/versions/: e3b45bce2f62_chore_created_initial_tables.py
demo/: README.md  __init__.py  graph.py  nodes.py  prompts.py  run_demo.sh  state.py  streamlit_app.py  tools.py
demo/api/: app.py  get_stream.py  utilities.py
demo/api/routes/: __init__.py
demo/api/routes/v1/: feedback.py  get_history.py  get_stream.py
demo/api/utilities/: utilities.py
docker/: Dockerfile.worker  k8s-deployment.yaml  redis.conf  supervisord.conf
docker/logs/: celery-high.err  celery-low.err  celery-normal.err
docs/: todo.md
notebooks/: 00-test-lab.ipynb  01-lab.ipynb  cleaned_doc.txt
src/: __init__.py  graph.py  nodes.py  prompts.py  startup.py  state.py  stream_manager.py
src/api/: app.py
src/api/core/: auth.py  cache.py  dependencies.py  exceptions.py  lifespan.py  middleware.py
src/api/routes/: __init__.py
src/api/routes/v1/: admin.py  auth.py  health.py  history.py  rag.py  retrievals.py  stream.py  task_status.py
src/celery_app/: __init__.py  app.py  globals.py  signals.py
src/celery_app/tasks/: periodic.py  prediction.py
src/config/: __init__.py  config.py  config.yaml  settings.py
src/db/: crud.py  init.py  models.py
src/infra/: stream_manager.py
src/schemas/: __init__.py  base.py  input_schema.py  internal_schemas.py  nodes_schema.py  types.py  user_schema.py
src/schemas/routes/: __init__.py  health.py  history_schema.py  rag_schema.py  streamer_schema.py  task_status.py
src/scripts/: create_admin.py
src/utilities/: bm25_utils.py  client.py  embeddings.py  llm_utils.py  model_config.py  reranker.py  tools.py  utils.py  vectorstores.py
src/utilities/openrouter/: client.py  types.py  utils.py
src/utilities/openrouter/resources/: models.py
src/utilities/tools/: helpers.py  tools.py
tests/: test_demo.py
